<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHistoryActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="391dp"
            android:layout_height="674dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="26dp"
            android:layout_gravity="center"
            android:background="@drawable/button_margin_transparent"

            android:orientation="vertical">

            <TextView
                android:id="@+id/record_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Medical History"
                android:textAlignment="center"
                android:textSize="24sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Age"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/age"

                    android:hint="Weight"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/blood_group_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/blood_group"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/bloodGroupSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weight"
                android:layout_marginTop="03dp"></Spinner>

            <TextView
                android:id="@+id/disease_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Diseases"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/diseaseSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bloodGroupSpinner"
                android:layout_marginTop="10dp"></Spinner>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_disease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/disease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/diseaseSpinner"
                    android:hint="@string/disease"
                    android:visibility="gone" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/allergies_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/allergies"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/allergiesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/disease"
                android:layout_marginTop="10dp"></Spinner>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_allergie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/allergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/allergiesSpinner"
                    android:hint="Enter Allergy name"
                    android:visibility="gone" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/submit_details"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:onClick="addHistoryImplementation"
                android:background="@drawable/button_background"
                android:text="Submit"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>